--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,10 +2,10 @@
   <html>
       <head>
           <meta charset=utf-8/>
-          <title>Test</title>
+          <title>Bookphonia</title>
       </head>
       <body>
-          <div id="app">This is a test</div>
+          <div id="app"></div>
           <script src="/app.js"></script>
       </body>
   </html>
